# Globe_Project

./: .gitignore  README.md  census_change.xlsx  compute_pop.py  eslint.config.js  package-lock.json  package.json  tmpclaude-cb69-cwd  vite.config.js  vitest.config.js
.claude/context/: product-context.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-style-guide.md  project-vision.md  system-patterns.md  tech-context.md
.github/workflows/: ci.yml
e2e/: globe.spec.js  playwright.config.js
o3de/GlobeProject/: CMakeLists.txt  project.json
o3de/GlobeProject/Gem/GlobeLayers/: CMakeLists.txt  gem.json
o3de/GlobeProject/Gem/GlobeLayers/Code/: CMakeLists.txt  globelayers_files.cmake  globelayers_shared_files.cmake  globelayers_tests_files.cmake
o3de/GlobeProject/Gem/GlobeLayers/Code/Include/GlobeLayers/: GlobeLayerNotificationBus.h  GlobeLayersBus.h  GlobeLayersTypeIds.h
o3de/GlobeProject/Gem/GlobeLayers/Code/Source/: GlobeLayersModuleInterface.cpp  GlobeLayersModuleInterface.h
o3de/GlobeProject/Gem/GlobeLayers/Code/Source/Clients/: GlobeLayersModule.cpp  GlobeLayersSystemComponent.cpp  GlobeLayersSystemComponent.h
o3de/GlobeProject/Gem/GlobeLayers/Code/Tests/: GlobeLayersTest.cpp
o3de/GlobeProject/Gem/GlobeOsintFeeds/: CMakeLists.txt  gem.json
o3de/GlobeProject/Gem/GlobeOsintFeeds/Code/: CMakeLists.txt  globeosintfeeds_files.cmake  globeosintfeeds_shared_files.cmake  globeosintfeeds_tests_files.cmake
o3de/GlobeProject/Gem/GlobeOsintFeeds/Code/Include/GlobeOsintFeeds/: GlobeOsintFeedsBus.h  GlobeOsintFeedsTypeIds.h
o3de/GlobeProject/Gem/GlobeOsintFeeds/Code/Source/: GlobeOsintFeedsModuleInterface.cpp  GlobeOsintFeedsModuleInterface.h
o3de/GlobeProject/Gem/GlobeOsintFeeds/Code/Source/Clients/: GlobeOsintFeedsModule.cpp  GlobeOsintFeedsSystemComponent.cpp  GlobeOsintFeedsSystemComponent.h
o3de/GlobeProject/Gem/GlobeOsintFeeds/Code/Tests/: GlobeOsintFeedsTest.cpp
o3de/GlobeProject/Gem/GlobePopulation/: CMakeLists.txt  gem.json
o3de/GlobeProject/Gem/GlobePopulation/Code/: CMakeLists.txt  globepopulation_files.cmake  globepopulation_shared_files.cmake  globepopulation_tests_files.cmake
o3de/GlobeProject/Gem/GlobePopulation/Code/Include/GlobePopulation/: GlobePopulationBus.h  GlobePopulationTypeIds.h
o3de/GlobeProject/Gem/GlobePopulation/Code/Source/: GlobePopulationModuleInterface.cpp  GlobePopulationModuleInterface.h
o3de/GlobeProject/Gem/GlobePopulation/Code/Source/Clients/: GlobePopulationModule.cpp  GlobePopulationSystemComponent.cpp  GlobePopulationSystemComponent.h  PopulationMarkerComponent.cpp  PopulationMarkerComponent.h
o3de/GlobeProject/Gem/GlobePopulation/Code/Source/Utils/: IonApiClient.cpp  IonApiClient.h  TokenLoader.h
o3de/GlobeProject/Gem/GlobePopulation/Code/Tests/: GlobePopulationTest.cpp  IonApiClientTest.cpp
o3de/GlobeProject/Gem/GlobeUI/: CMakeLists.txt  gem.json
o3de/GlobeProject/Gem/GlobeUI/Code/: CMakeLists.txt  globeui_files.cmake  globeui_shared_files.cmake  globeui_tests_files.cmake
o3de/GlobeProject/Gem/GlobeUI/Code/Include/GlobeUI/: GlobeUIBus.h  GlobeUITypeIds.h
o3de/GlobeProject/Gem/GlobeUI/Code/Source/: GlobeUIModuleInterface.cpp  GlobeUIModuleInterface.h
o3de/GlobeProject/Gem/GlobeUI/Code/Source/Clients/: GlobeUIModule.cpp  GlobeUISystemComponent.cpp  GlobeUISystemComponent.h
o3de/GlobeProject/Gem/GlobeUI/Code/Tests/: GlobeUITest.cpp
o3de/GlobeProject/cmake/: EngineFinder.cmake
public/data/: cities.geojson
public/topo/: ar-provinces.json  bd-divisions.json  bo-departments.json  br-states.json  cl-regions.json  co-departments.json  ec-provinces.json  gf-territory.json  gy-regions.json  id-provinces.json  ng-states.json  pe-regions.json  pk-provinces.json  py-departments.json  ru-regions.json  sr-districts.json  uy-departments.json  ve-states.json
rust/compute_pop/: Cargo.toml
rust/globe_desktop/: Cargo.toml  RETIRED.md
rust/globe_desktop/assets/: countries.json
rust/globe_desktop/src/: app.rs  main.rs
rust/globe_desktop/src/cesium/: maps_api.rs  mod.rs
rust/globe_desktop/src/data/: loader.rs  types.rs
rust/globe_desktop/src/renderer/: camera.rs  mesh.rs  mod.rs  pipeline.rs  program.rs
rust/globe_desktop/src/ui/: details.rs  mod.rs  sidebar.rs  theme.rs
rust/globe_desktop/src/utils/: format.rs  search.rs
rust/globe_ffi/: Cargo.toml  build.rs  cbindgen.toml
rust/globe_ffi/include/: globe_ffi.h
rust/globe_ffi/src/: format.rs  lib.rs  search.rs  types.rs
scripts/: convert_countries.mjs  generateCountyData.js
src/: App.jsx  CesiumGlobe.jsx  Globe.jsx  index.css  tmpclaude-579b-cwd
src/cesium/: airQualityLayer.js  buildingsLayer.js  cityLayer.js  pollenLayer.js  populationLayer.js  solarLayer.js  terrainSetup.js  topoUtils.js  weatherLayer.js
src/components/: Sidebar.jsx  Tooltip.jsx
src/config/: airQualityConfig.js  pollenConfig.js  solarConfig.js  weatherConfig.js
src/data/: countries.js  idMap.js  index.js
src/store/: useAppStore.js
src/utils/: ionApi.js  sidebarLogic.js
src/webgpu/: county-compute.js
tests/: setup.js
tests/components/: App.test.jsx  CesiumGlobe.test.jsx  Sidebar.test.jsx  Tooltip.test.jsx
tests/config/: subdivisionConfig.test.js
(+32 files in other folders)
