[package]
name = "globe_desktop"
version = "0.1.0"
edition = "2024"
description = "Desktop globe visualization using Iced"

[dependencies]
iced = { version = "0.14", features = ["tokio", "wgpu", "image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
wgpu = "27"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
pretty_assertions = "1"
