[package]
name = "globe_ffi"
version = "0.1.0"
edition = "2024"
description = "C FFI bindings for globe data layer - consumed by O3DE"

[lib]
name = "globe_ffi"
crate-type = ["staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
pretty_assertions = "1"
